--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "A sample Node.js app using Express 4",
   "main": "index.js",
   "scripts": {
+    "test": "mocha",
     "start": "node index.js"
   },
-  "dependencies": {
-    "express": "^4.13.3"
+  "devDependencies": {
+    "express": "^4.13.3",
+    "mocha": "^3.4.2",
+    "supertest": "^3.0.0"
   },
   "engines": {
     "node": "4.0.0"
